<resources>
    <string name="app_name">Android Demo</string>
    <string name="action_settings">Settings</string>

    <string name="list_spinner_title">Arrange</string>
    <string name="default_time">22:22:22 2.2.2012</string>
    <string name="description">Description</string>
    <string name="add_a_new_person">Add a new person!</string>
    <string name="added_time">Time</string>
    <string name="add_person">Add a person</string>
    <string name="arrange_people">Arrange people</string>
    <string name="name">Full Name</string>
    <string name="delete">delete</string>
    <string-array name="list_spinner_items">
        <item>Time desc.</item>
        <item>Time asc.</item>
    </string-array>
</resources>
