<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:umanoPanelHeight="40dp"
    android:gravity="bottom"
    app:umanoDragView="@id/umano_drag_view"
    tools:context="com.example.lauri.androiddemo.MainActivity"
    android:background="@color/palette5">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/refresh_people_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/people_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:clipToPadding="false"
                android:paddingBottom="10dp" />
        </android.support.v4.widget.SwipeRefreshLayout>
    </android.support.constraint.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- drag panel header-->
        <TextView
            android:id="@+id/umano_drag_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/add_a_new_person"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/list_shadow4"/>

        <ScrollView
            android:id="@+id/add_person_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_marginTop="15dp">

                <!-- Name -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:paddingLeft="5dp"/>
                <EditText
                    android:id="@+id/add_person_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/box_with_border"
                    android:textSize="18sp"
                    android:padding="5dp">
                </EditText>

                <!-- Description -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:paddingLeft="5dp" />
                    <TextView
                        android:id="@+id/add_description_char_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/lightShadow"
                        android:text="0/255"
                        android:layout_marginLeft="5dp"/>
                </LinearLayout>

                <EditText
                    android:id="@+id/add_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:maxLength="255"
                    android:background="@drawable/box_with_border"
                    android:padding="5dp"/>

                <!-- Add Person -->
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/add_person_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_person"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>